--- a/style.css
+++ b/style.css
@@ -32,13 +32,17 @@ body {
     border-bottom: 1px solid #5e5959;
 }
 
+.navbar-brand {
+    font-weight: 500;
+}
+
 .main-container {
     margin-top: 120px;
 
 }
 
 .content-box {
-    background-color: #5e5959;
+    background-color: #245b70;
     margin: auto;
     width: 100%;
     padding: 10px;
@@ -58,6 +62,7 @@ body {
 
 .header {
     color: rgb(39, 39, 39);
+    font-weight: 600;
     border-bottom: 2px solid rgb(39, 39, 39);
     max-width: 915px;
     padding-bottom: 10px;
@@ -77,15 +82,17 @@ body {
 }
 
 .logo_1 {
-    filter: grayscale(100%);
+    /* filter: grayscale(100%); */
     display: inline-block;
     margin: 10px;     
     max-width: 100px;
     max-height: 100px;
 }
 
+
 .logo_2 {
-    filter: grayscale(100%);
+    filter: hue-rotate(-176deg);
+    /* filter: grayscale(100%); */
     display: inline-block;
     margin: 10px;
     max-width: 100px;
@@ -93,7 +100,8 @@ body {
 }
 
 .logo_3 {
-    filter: grayscale(100%);
+    filter: hue-rotate(-102deg);
+    /* filter: grayscale(100%); */
     display: inline-block;
     margin: 10px;
     max-width: 100px;
